# Astrobee-Ocelli

./: Ocelli_Param.yaml  README.md  ROS_Rviz_config_reg.rviz  ocelli.sh
OcelliLepton/LeptonModule/software/raspberrypi_video/: LeptonThread.cpp  LeptonThread.h  Lepton_I2C.cpp  Lepton_I2C.h  Makefile  README.md  main.cpp  raspberrypi_video
registered_cameras/: CMakeLists.txt  package.xml
registered_cameras/scripts/: registered_cameras_node.py
